tests/miniJava/neg/004855_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] class java { public static void Main ( String [ ] java ) { { } } } ) { return 0 ; } }
